fix scrollbar appearing when it shouldn't

--- a/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/styles.scss
@@ -21,6 +21,7 @@
 
 .list {
   margin-left: $md-padding-y;
+  margin-bottom: 1px;
 }
 
 .smallTitle {
